k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-py-app
  template:
    metadata:
      labels:
        app: hello-py-app
    spec:
      containers:
        - name: hello-py
          image: turneps403/otus-spring-demo:v2
          ports:
            - name: web
              containerPort: 8080
