k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
    - name: hello-demo
      image: turneps403/otus-spring-demo:v2
      ports:
        - containerPort: 8080
