k8s/3-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:latest
        name: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgredb-volume
            mountPath: /var/lib/postgresql/data
            subPath: postgres
      volumes:
        - name: postgredb-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
